# cookiecutter-templates

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
android/quest-vr/: cookiecutter.json
android/quest-vr/hooks/: post_gen_project.py
android/quest-vr/{{cookiecutter.project_slug}}/: CLAUDE.md  Justfile
hooks/: _template_source.py
legacy/cookiecutter-uv/: CHANGELOG.md  cookiecutter.json
legacy/cookiecutter-uv/hooks/: post_gen_project.py
legacy/cookiecutter-uv/{{cookiecutter.project_name}}/: .gitignore  CLAUDE.md  Justfile  README.md  agent.md  mkdocs.yml  pyproject.toml
python/cli/: CHANGELOG.md  cookiecutter.json
python/cli/hooks/: post_gen_project.py
python/cli/{{cookiecutter.project_slug}}/: .gitignore  CLAUDE.md  Justfile  README.md  agent.md  pyproject.toml
python/cli/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug.replace('-', '_')}}/: cli.py
python/fastapi/: CHANGELOG.md  cookiecutter.json
python/fastapi/hooks/: post_gen_project.py
python/fastapi/{{cookiecutter.project_slug}}/: .gitignore  CLAUDE.md  Justfile  README.md  agent.md  pyproject.toml
python/fastapi/{{cookiecutter.project_slug}}/.claude/scripts/: check_template_update.py
python/fastapi/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug.replace('-', '_')}}/: main.py
python/flask/: CHANGELOG.md  cookiecutter.json
python/flask/hooks/: post_gen_project.py
python/flask/{{cookiecutter.project_slug}}/: CLAUDE.md  Justfile  README.md  agent.md  pyproject.toml
python/flask/{{cookiecutter.project_slug}}/.claude/: settings.json
python/flask/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug.replace('-', '_')}}/: app.py
rust/cli/: CHANGELOG.md  cookiecutter.json
swift/ios/: CHANGELOG.md  cookiecutter.json
swift/macos/: CHANGELOG.md  cookiecutter.json
swift/stt-component/: cookiecutter.json
tools/: bump_version.py  inject_tracking.py  render_test.py  review_diagnostics.py  sync_check.py  sync_manifest.json  test_library_check.py  test_update_check.py  update_scaffold.py
typescript/bun-package/: cookiecutter.json
typescript/nextjs/: cookiecutter.json
typescript/node/: cookiecutter.json
typescript/node-api/: cookiecutter.json
typescript/node-cli/: CHANGELOG.md  cookiecutter.json
typescript/node-lib/: cookiecutter.json
typescript/node-worker/: cookiecutter.json
typescript/react/: cookiecutter.json
typescript/sveltekit/: CHANGELOG.md  cookiecutter.json
(+97 files in other folders)
